# Sinced

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  setup.sh
bridges/: file_saver.py  savefile_service.py
docs/: COMMANDS.md  COMMANDS_TODO.md  COMMANDS_TODO_LOG.md  COMMANDS_TODO_MOD.md  COMMANDS_TODO_RM.md  COMMANDS_TODO_SET.md  TODO_UPDATES.md
include/date/: base_date.hpp  format_date.hpp  format_date_factory.hpp
include/entry/: entry_base.hpp  entry_base_builder.hpp  entry_filter.hpp  entry_filter_factory.hpp  entry_formatter.hpp  entry_handler.hpp  entry_sorter.hpp  entry_sorter_factory.hpp
include/mcg_reader/: reader.hpp
include/parser/: parser.hpp
include/syntax_analysis/: help_messages.hpp  interpreter.hpp  lexer.hpp  token.hpp
navigation/: back_button_file.py  navigation_bar.py
records/database/: categories.mdb  relations.mdb  tasks.mdb
records/database/testing_bd/: categories_test.mdb  tasks_test.mdb  tasks_test2.mdb  tasks_test_deadlines.mdb
records/mcgs/: settings.mcg  tracker.mcg
records/testing_records/bd/: categories_test2.mdb  relations_test2.mdb  tasks_test3.mdb  tasks_test_deadlines.mdb
records/testing_records/bd/test_interpreter/: categories.mdb  relations.mdb  settings.mcg  tasks.mdb  tracker.mcg
records/testing_records/bd/test_modify/: relations.mdb
records/testing_records/mcgs/: test_settings.mcg  test_tracker.mcg
settings/: config_init.py  configfile.ini  enums.py
sidebar/: sidebar_container.py  sidebar_interface.py
sidebar/instances/: roadmap.py  settings.py
sidebar/instances/todo_dir/: new_task_option_row.py  task.py  task_container.py  task_list.py  text_field_date_row.py  to_do.py  to_do_text_field.py
sidebar/instances/todo_dir/task_list/: canceled_task_list.py  done_task_list.py  on_going_task_list.py  task_list_instance.py  task_list_manager.py
sidebar/instances/todo_dir/task_list/task_entity/: draggable_task.py  task_container.py  task_dataclass.py
src/: CMakeLists.txt  main.cc
src/date/: base_date.cc  format_date.cc  format_date_factory.cc
src/entry/: entry_base.cc  entry_base_builder.cc  entry_filter.cc  entry_filter_factory.cc  entry_formatter.cc  entry_handler.cc  entry_sorter.cc  entry_sorter_factory.cc
src/mcg_reader/: reader.cc
src/parser/: parser.cc
src/syntax_analysis/: interpreter.cc  lexer.cc  token.cc
tests/: CMakeLists.txt  test.cc  test_cfg_main.cc  test_date.cc  test_entry.cc  test_entry_base_builder.cc  test_entry_filter.cc  test_entry_handler.cc  test_entry_handler_io.cc  test_entry_handler_modify.cc  test_entry_sorter.cc  test_interpreter.cc  test_interpreter_add.cc  test_interpreter_log.cc  test_interpreter_mod.cc  test_interpreter_reset.cc  test_interpreter_rm.cc  test_interpreter_set.cc  test_lexer.cc  test_mcg_reader.cc  test_parser.cc
